--- a/app/assets/stylesheets/modules/_Vacancies_form.scss
+++ b/app/assets/stylesheets/modules/_Vacancies_form.scss
@@ -120,31 +120,46 @@
   grid-gap: 1rem;
   grid-template-columns: 1fr 1fr 1fr;
   overflow-y: scroll;
+  padding: 10px;
   .View-contents {
+    border-radius: 10px;
     height: 450px;
-    width: 330px;
+    width: 300px;
     background-color: gold;
     padding: 15px;
+    .View-title {
+      margin-bottom: 10px;
+    }
     .View-top {
       background-color: gray;
-      width: 300px;
-      height: 250px;
-      &__img {
-      height: 250px;
-      object-fit: cover;
       width: 100%;
+      height: 150px;
+      border-radius: 10px;
+      &__img {
+      object-fit: cover;
       }
     }
     .View-middle {
+      margin-top: 10px;
+      width: 100%;
+    }
+    
+    .View-text {
+      border: 1px solid lightgray;
+      line-height: 30px;
       &__left {
+        width: 30%;
       }
       &__right {
+        padding-left: 20px;
+        width: 70%;
       }
     }
+
     .View-bottom {
       background-color: honeydew;
-      width: auto;
-      height: 90px;
+      width: 100px;
+      // height: 90px;
       display: flex;
       justify-content: space-evenly;
       align-items: center;
