--- a/app/views/jobs/_Vacancies_form.html.haml
+++ b/app/views/jobs/_Vacancies_form.html.haml
@@ -84,7 +84,7 @@
           .View-title
             =list.title
           .View-top
-            = image_tag list.image1.url, class: 'View-top __img' if list.image1.present?
+            = image_tag list.image1.url, class: 'View-top__image' if list.image1.present?
           %table.View-middle
             %tr.View-text
               %td.View-text__left
