--- a/app/assets/stylesheets/modules/_Vacancies_form.scss
+++ b/app/assets/stylesheets/modules/_Vacancies_form.scss
@@ -110,21 +110,23 @@
     text-align: center;
     font-size: 25px;
     margin: 20px;
-    overflow-x: scroll;
   }
 }
 
 .View-wrapper {
+  overflow-x: scroll;
   height: 460px;
   background-color: lightblue;
   margin: 0 auto;
   width: 800px;
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: 1fr 1fr 1fr;
-  overflow-y: scroll;
+  display: flex;
+  // display: grid;
+  // grid-gap: 1rem;
+  // grid-template-columns: 1fr 1fr 1fr;
+  // overflow-y: scroll;
   padding: 10px;
   .View-contents {
+    margin-right: 10px;
     border-radius: 10px;
     width: 300px;
     background-color: white;
@@ -138,6 +140,7 @@
   border-radius: 5px;
   margin-bottom: 10px;
   padding: 3px;
+  height: 55px;
 }
 
 .View-top {
