--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -71,10 +71,11 @@
 .Under-info {
   margin-top: 20px;
   display: flex;
-  &__icon, &__text {
-    font-size: 20px;
+  font-size: 20px;
+  &__icon {
     &--folder {
       color: darkturquoise;
+      margin-right: 10px;
     }
   }
 }
@@ -83,7 +84,6 @@
 .Under-wrapper {
   margin-top: 30px;
   justify-content: space-between;
-  overflow-y: scroll;
   display: flex;
   .Bar-left {
     width: 710px;
@@ -93,12 +93,15 @@
       }
     }
     &__middle {
-      margin-top: 20px;
-
+      overflow-y: scroll;
+      height: 1000px;
+      padding: 15px;
+      background-color: lightblue;
     }
   }
   .Bar-right{
   width: 240px;
+  height: 300px;
   margin-left: 20px;
   border: 1px solid gainsboro;
   border-radius: 5px;
@@ -109,8 +112,8 @@
 
 
 .Job-box {
-  height: 277px;
-  background-color: lightblue;
+  height: 290px;
+  background-color: white;
   padding: 15px;
   margin-bottom: 20px;
   
@@ -121,7 +124,7 @@
   justify-content: space-between;
   margin-bottom: 5px;
   &__new {
-    font-size: 13px;
+    font-size: 12px;
     color: red;
     border: 1px solid red;
     border-radius: 3px;
@@ -134,10 +137,12 @@
 }
 
 .Job-catch {
-  height: 60px;
-  background-color: silver;
+  height: 70px;
+  background-color: linen;
+  border-radius: 10px;
   margin-bottom: 10px;
   display: flex;
+  padding: 5px;
   &__textarea {
     width: 70%;
     height: 60px;
@@ -158,37 +163,41 @@
 }
 
 .Contents {
-  background-color: gold;
   display: flex;
-  // padding: 15px;
   .Content-left {
     background-color: gray;
     width: 250px;
     height: 150px;
     &__img {
+      border-radius: 10px;
       height: 150px;
       object-fit: cover;
       width: 100%;
     }
   }
-  
   .Content-right {
-    padding: 10px;
+    width: calc(100% - 250px);
   }
   
   .Text-content {
     display: flex;
+    height: 38px;
     &__left {
-      margin: 0 15px 0 10px;
-      font-size: 20px;
+      margin: 0 15px 0 20px;
+      font-size: 16px;
+      line-height: 40px;
+      color: lightskyblue;
     }
     &__right {
-      line-height: 30px;
+      // line-height: 30px;
       font-size: 14px;
+      overflow-wrap: break-word;
+      line-height: 40px;
     }
     &__rightlong {
-      height: 30px;
-      font-size: 14px;
+     font-size: 14px; 
+      // overflow-wrap: break-word;
+
     }
   }
 }
