--- a/app/views/matches/_job_matches.html.haml
+++ b/app/views/matches/_job_matches.html.haml
@@ -73,7 +73,7 @@
                       -# 気になる！
                   - else
                     = link_to job_favorites_path(match), method: :post do
-                      = icon('fa', 'star')
+                      = icon('far', 'star')
                       -# いいねする
                   = match.favorites.count
             .Contents
