--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -141,7 +141,7 @@
   display: flex;
   padding: 5px;
   &__textarea {
-    width: 80%;
+    width: 84%;
     height: 60px;
     display: table;
     &--text {
@@ -150,12 +150,13 @@
     }
   }
   &__box {
-    width: 20%;
+    width: 16%;
     font-size: 15px;
     line-height: 60px;
     display: flex;
     &--star {
-      font-size: 18px;
+      font-size: 17px;
+      text-decoration: none;
       &--color {
         color: gold;
       }
